# SparseDNNAccelerator

./: .gitignore  .gitmodules  README.md
accelerator/: .gitignore  CMakeLists.txt  a10pac.cmake  accelerator.sublime-project  accelerator.sublime-workspace  aoc.cmake  config.cmake  de10standard.cmake
accelerator/accelerator_wrapper/: CMakeLists.txt
accelerator/accelerator_wrapper/include/: accelerator_wrapper.hpp  accelerator_wrapper.hpp.autosave
accelerator/accelerator_wrapper/src/: accelerator_wrapper.cpp  timer.cpp
accelerator/cnpy/: CMakeLists.txt  cnpy.cpp  cnpy.hpp  example1.cpp
accelerator/common/: CMakeLists.txt  spwtensorcompression.hpp
accelerator/common/inc/: floatFixedPointConversion.hpp  layerInstructionGenerator.hpp  params.hpp  spwTensorCompression.hpp  tensorCompression.hpp  tile.hpp  vectorType.hpp
accelerator/common/inc/AOCLUtilsCpp/: aocl_utils_cpp.hpp  opencl.hpp  options.hpp
accelerator/common/src/: floatFixedPointConversion.cpp  layerInstructionGenerator.cpp  layerInstructionGenerator.cpp.autosave  spwTensorCompression.cpp  tensorCompression.cpp  tile.cpp
accelerator/common/src/AOCLUtilsCpp/: opencl.cpp  options.cpp
accelerator/device/: channels.cl  channels.hpp  device_structures.hpp  device_utils.cl  device_utils.hpp  leadingZero_lib.hpp  params.hpp  pe.cl  peComponents.cl  peComponents.hpp  prints.hpp  prototypePE_structs.hpp  rtl_lib.hpp  simple_weight_memory.cl  simple_weight_memory_test.cl  sparseAccelerator.cl  sparseWeightMemory.cl  sparse_pe_system.cl
accelerator/device/RTL/: .gitignore  Makefile  a10_chain_madd_8bit.aoco  a10_mac_8bitx2.aoco  a10_mac_8bitx4.aoco  c5_mac_8bitx2.aoco  c5_mac_8bitx4.aoco  leadingZero.aoco  leadingZeroCounter.aoco  leadingZero_lib.aoclib  operandMatcher.aoco  popCounter.aoco  rtl_lib.aoclib  smallBuffer.aoco  vsim.wlf
accelerator/device/RTL/quartus_a10_chain_madd/: a10_chain_madd_8bit.cl  a10_chain_madd_8bit.v  a10_chain_madd_8bit.xml
accelerator/device/RTL/quartus_a10_mac/: a10_fpga_golden_top.v  a10_mac8bitx2_c_model.cl  a10_mac8bitx4_c_model.cl  a10_mac_8bitx2.xml  a10_mac_8bitx2_cl.v  a10_mac_8bitx4.ip  a10_mac_8bitx4.qpf  a10_mac_8bitx4.qsf  a10_mac_8bitx4.xml  a10_mac_8bitx4_assignment_defaults.qdf  a10_mac_8bitx4_cl.v  a10_mac_8bitx4_input_registered.ip  a10_mac_8bitx4_tb.v  modelsim.ini  vsim.wlf
accelerator/device/RTL/quartus_a10_mac/.qsys_edit/: a10_mac_8bitx4.xml  a10_mac_8bitx4_input_registered.xml  filters.xml  preferences.xml
accelerator/device/RTL/quartus_a10_mac/a10_mac_8bitx4/: a10_mac_8bitx4.bsf  a10_mac_8bitx4.csv  a10_mac_8bitx4.ppf  a10_mac_8bitx4.qgsimc  a10_mac_8bitx4.qip  a10_mac_8bitx4.sopcinfo  a10_mac_8bitx4.spd  a10_mac_8bitx4.v  a10_mac_8bitx4.xml  a10_mac_8bitx4_bb.v  a10_mac_8bitx4_inst.v
accelerator/device/RTL/quartus_a10_mac/a10_mac_8bitx4_input_registered/: a10_mac_8bitx4_input_registered.bsf  a10_mac_8bitx4_input_registered.csv  a10_mac_8bitx4_input_registered.ppf  a10_mac_8bitx4_input_registered.qgsimc  a10_mac_8bitx4_input_registered.qip  a10_mac_8bitx4_input_registered.sopcinfo  (+4 more)
accelerator/device/RTL/quartus_c5_mac/: DE10_Standard_golden_top.v  c5_mac8bitx2_c_model.cl  c5_mac8bitx4_c_model.cl  c5_mac_8bitx2.bsf  c5_mac_8bitx2.ppf  c5_mac_8bitx2.qip  c5_mac_8bitx2.sip  c5_mac_8bitx2.spd  c5_mac_8bitx2.v  c5_mac_8bitx2.xml  c5_mac_8bitx2_cl.v  c5_mac_8bitx2_sim.f  c5_mac_8bitx2_tb.v  c5_mac_8bitx3_tb.v  c5_mac_8bitx4.bsf  c5_mac_8bitx4.ppf  c5_mac_8bitx4.qip  c5_mac_8bitx4.sip  c5_mac_8bitx4.spd  c5_mac_8bitx4.v  c5_mac_8bitx4.xml  c5_mac_8bitx4_cl.v  c5_mac_8bitx4_input_registered.bsf  c5_mac_8bitx4_input_registered.ppf  c5_mac_8bitx4_input_registered.qip  c5_mac_8bitx4_input_registered.sip  c5_mac_8bitx4_input_registered.spd  c5_mac_8bitx4_input_registered.v  c5_mac_8bitx4_input_registered_sim.f  c5_mac_8bitx4_sim.f  c5_mac_8bitx4_tb.v  modelsim.ini  quartus_c5_mac.qpf  quartus_mac.qsf  vsim.wlf
accelerator/device/RTL/quartus_leadingZeroCounter/: DE10_Standard_golden_top.sdc  leadingZeroCounter.qpf  leadingZeroCounter.xml  leadingZeroCounter_c_model.cl  leadingZeroCounter_cl.v  top.qsf  top.v
accelerator/device/RTL/quartus_operandMatcher/: DE10_Standard_golden_top.sdc  operandMatcher.xml  operandMatcher_c_model.cl  operandMatcher_cl.v  output.vcd  popCounter.xml  popCounterWrapper_cl.v  quartus_operandMatcher.qpf  simulation.do  tb_operandMatcher.v  top.qsf  top.v  vsim.wlf
accelerator/device/RTL/quartus_registerFile/: DE1_SOC_golden_top.sdc  lpm_decoder.qip  lpm_decoder.v  lpm_decoder_bb.v  regFile.qpf  regFile.v  top.qsf  top.v
accelerator/device/RTL/quartus_smallBuffer_lib/: my_first_fpga.sdc  quartus_top.v  smallBuffer.cl  smallBufferLib.xml  small_buffer_lib.v  top.qpf  top.qsf
accelerator/flexible_bitmask_compression_test/: CMakeLists.txt  main.cpp
accelerator/full_system/: CMakeLists.txt  main.cpp  main.cpp.autosave
accelerator/graph_factory/: CMakeLists.txt  graph_factory_test.cpp
accelerator/graph_factory/include/: graph_factory.hpp
accelerator/graph_factory/src/: graph_factory.cpp
accelerator/imagenet_demo/: .gitignore  CMakeLists.txt  convert_imagenet_ids.py  imagenet_demo.cpp  preprocess.yaml  requirements.txt
accelerator/latency_model_validation/: CMakeLists.txt  latency_model_validation.cpp
accelerator/model_container/: .gitignore  CMakeLists.txt  model_container_test.cpp
accelerator/model_container/include/: model_container.hpp
accelerator/model_container/src/: model_container.cpp
accelerator/prototype_pe_test/: CMakeLists.txt  main.cpp  prototypePETest.cl  prototypePE_structs.hpp
accelerator/simple_weight_memory/: CMakeLists.txt  main.cpp
accelerator/small_buffer_test/: CMakeLists.txt  main.cpp  smallBufferTest.cl  small_buffer.hpp
accelerator/spw_pe_test/: CMakeLists.txt  spw_pe_test_channels.hpp  spw_pe_test_harness.cl  spw_pe_test_host.cpp  spw_pe_test_types.hpp
accelerator/spw_tensor_test/: CMakeLists.txt  main.cpp
accelerator/toy_ping_pong/: CMakeLists.txt  main.cpp  toyPingPong.cl
accelerator/weight_memory_test/: CMakeLists.txt  main.cpp  sparseWeightMemoryTest.cl
(+52 files in other folders)
